# filter-snippets

./: Cargo.toml  README.md
src/: cli.rs  hardcoded_snippets.rs  main.rs  snippets.rs  utils.rs
