[package]
name = "filter-snippets"
version = "0.2.0"
edition = "2024"

# Stole most of this from the Microsoft Edit repo
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
html-escape = "0.2.9"
